fixed wrong positioned footer in mobile view

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -15,8 +15,8 @@ body{
   background-color: white !important;
     // width: 100%;
     // height: 100%;
-    // margin: 0px;
-    // padding: 0px;
+  // margin: 0px;
+  // padding: 0px;
     // overflow-x: hidden;
 }
 
@@ -26,20 +26,12 @@ body{
   align-items: center;
 }
 
-.content-container {
-  height:100vh;
+
+.page-container {
+  display: grid;
+  min-height: 100vh;
+  grid-template-rows: auto 1fr auto;
 }
-
-/* If the screen size is 600px wide or less, then apply this settings */
-@media only screen and (max-width: 600px) {
-
-.content-container {
-height: auto;
-}
-
-}
-
-
 
 
 
