--- a/app/assets/stylesheets/pages/show_cocktails.scss
+++ b/app/assets/stylesheets/pages/show_cocktails.scss
@@ -2,7 +2,6 @@
   border-radius: 5px;
   margin-top: 20px;
   margin-bottom: 20px;
-  border: 1px solid black;
   width: 50%;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   padding-bottom: 20px;
